force-app/main/default/objects/Tower_Failure__e/Tower_Failure__e.object-meta.xml
<CustomObject>
    <label>Tower Failure</label>
    <pluralLabel>Tower Failures</pluralLabel>
</CustomObject>