force-app/main/default/objects/Tower_Failure__e/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>