force-app/main/default/objects/Tower_Failure__e/fields/Tower_Id__c.field-meta.xml
<CustomField>
    <fullName>Tower_Id__c</fullName>
    <label>Tower_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>